--- a/GameCatalogue/View/TableViewCell.xib
+++ b/GameCatalogue/View/TableViewCell.xib
@@ -54,18 +54,12 @@
                             <constraint firstAttribute="width" constant="42" id="dO3-1p-o4g"/>
                         </constraints>
                     </stackView>
-                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TuZ-Cx-yHR" userLabel="Game Release Date">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TuZ-Cx-yHR" userLabel="Game Release Date">
                         <rect key="frame" x="146.5" y="53.5" width="220.5" height="16.5"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B7u-ON-0QE">
-                        <rect key="frame" x="146.5" y="53" width="220.5" height="20"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="20" id="BSu-jo-E7h"/>
-                        </constraints>
-                    </stackView>
                     <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="Eqd-E9-tiI">
                         <rect key="frame" x="69.5" y="40" width="0.0" height="0.0"/>
                         <constraints>
@@ -75,9 +69,7 @@
                     </activityIndicatorView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="B7u-ON-0QE" secondAttribute="trailing" constant="8" id="3uz-uX-gtA"/>
                     <constraint firstAttribute="trailing" secondItem="eLz-L9-MjB" secondAttribute="trailing" constant="8" id="AIN-Ud-pPx"/>
-                    <constraint firstItem="B7u-ON-0QE" firstAttribute="leading" secondItem="WEU-Z3-yr7" secondAttribute="trailing" constant="8" id="By0-PR-PD9"/>
                     <constraint firstItem="eLz-L9-MjB" firstAttribute="top" secondItem="Fyb-WO-1iG" secondAttribute="bottom" constant="3" id="DCo-j3-9Nf"/>
                     <constraint firstItem="lnm-dZ-8IT" firstAttribute="leading" secondItem="Fyb-WO-1iG" secondAttribute="trailing" constant="5" id="HiK-fj-K1f"/>
                     <constraint firstAttribute="trailing" secondItem="TuZ-Cx-yHR" secondAttribute="trailing" constant="8" id="Hjz-bC-Ide"/>
@@ -86,7 +78,6 @@
                     <constraint firstItem="Fyb-WO-1iG" firstAttribute="leading" secondItem="WEU-Z3-yr7" secondAttribute="trailing" constant="8" id="Q34-Ju-EiN"/>
                     <constraint firstAttribute="trailing" secondItem="lnm-dZ-8IT" secondAttribute="trailing" constant="5" id="WW7-cI-fgo"/>
                     <constraint firstAttribute="bottom" secondItem="TuZ-Cx-yHR" secondAttribute="bottom" constant="10" id="bhp-Gi-8ED"/>
-                    <constraint firstAttribute="bottom" secondItem="B7u-ON-0QE" secondAttribute="bottom" constant="7" id="c0s-GN-sme"/>
                     <constraint firstItem="WEU-Z3-yr7" firstAttribute="leading" secondItem="vKD-mU-u1B" secondAttribute="leading" id="hD3-P2-NXr"/>
                     <constraint firstItem="WEU-Z3-yr7" firstAttribute="top" secondItem="vKD-mU-u1B" secondAttribute="top" constant="1" id="mHe-8Z-Xeg"/>
                     <constraint firstItem="lnm-dZ-8IT" firstAttribute="top" secondItem="vKD-mU-u1B" secondAttribute="top" constant="5" id="nVa-al-cVh"/>
@@ -104,7 +95,6 @@
                 <outlet property="gameRating" destination="jSk-f6-3uQ" id="Erx-Ey-bqI"/>
                 <outlet property="gameReleaseDate" destination="TuZ-Cx-yHR" id="j6J-bB-Yhb"/>
                 <outlet property="loadBar" destination="Eqd-E9-tiI" id="iCw-Y8-PZc"/>
-                <outlet property="platforms" destination="B7u-ON-0QE" id="zcH-b2-8LG"/>
             </connections>
             <point key="canvasLocation" x="32.608695652173914" y="72.991071428571431"/>
         </tableViewCell>
